  * Add support for parsing variables
  * Add support for writing terse output with minimal newlines
  * Add support for xsd:float and xsd:double literals
  * Make nodes opaque
  * Preserve long or short quoting from input documents
  * Refine and simplify command-line interface to support new features
  * Remove SERD_DISABLE_DEPRECATED and SERD_DEPRECATED_BY
  * Remove serd_uri_to_path()
  * Remove support for reading Turtle named inline nodes extension
  * Remove useless character counting from API
  * Replace SerdChunk with ZixStringView
  * Replace serdi with more focused tools
  * Simplify statement flags
  * Simplify writer style options and write UTF-8 by default
  * Strengthen handling of corrupt UTF-8 input
  * Strictly parse percent-encoding in file URIs
  * Support writing all escapes in Turtle and TriG prefixed names
  * Use a fixed-size reader stack
  * Use char* for strings in public API
  * Write canonical NTriples 1.1 by default

 -- David Robillard <d@drobilla.net>  Mon, 05 Feb 2024 19:48:46 +0000

serd (0.32.3) unstable; urgency=medium

  * Clean up enum declarations
  * Fix library current_version on MacOS
  * Fix overly permissive parsing of syntax names on the command line
  * Fix parsing NQuads lines with no space before the final dot
  * Fix rewriting special literals when datatype URIs are prefixed names
  * Gracefully handle errors while writing the end of anonymous nodes
  * Improve test suite coverage
  * Simplify some character classification and comparison code
  * Support reading lone lists in lax mode
  * Treat out of range unicode characters as errors
  * Write blank lines between graphs and statements in TriG

 -- David Robillard <d@drobilla.net>  Tue, 25 Jun 2024 22:38:16 +0000

serd (0.32.2) stable; urgency=medium

  * Enable clang nullability checks
  * Fix writing empty list objects within blank nodes

 -- David Robillard <d@drobilla.net>  Tue, 23 Jan 2024 19:32:21 +0000

serd (0.32.0) stable; urgency=medium
