@@ -33,6 +33,7 @@
 #include <string.h>
 
 typedef struct {
+  int n_event;
   int n_base;
   int n_prefix;
   int n_statement;
@@ -43,6 +44,8 @@ static SerdStatus
 test_sink(void* const handle, const SerdEvent* const event)
 {
   ReaderTest* const rt = (ReaderTest*)handle;
+
+  ++rt->n_event;
 
   switch (event->type) {
   case SERD_BASE:
@@ -142,7 +145,7 @@ test_start_closed(void)
 {
   SerdWorld* const world = serd_world_new(NULL);
   SerdEnv* const   env   = serd_env_new(NULL, zix_empty_string());
-  ReaderTest       rt    = {0, 0, 0, 0};
+  ReaderTest       rt    = {0, 0, 0, 0, 0};
   SerdSink* const  sink  = serd_sink_new(NULL, &rt, test_sink, NULL);
   assert(sink);
 
@@ -152,6 +155,7 @@ test_start_closed(void)
   SerdInputStream  in = {NULL, NULL, NULL, NULL};
   const SerdStatus st = serd_reader_start(reader, &in, NULL, 1);
   assert(st == SERD_BAD_ARG);
+  assert(rt.n_event == 0);
 
   serd_reader_free(reader);
   serd_sink_free(sink);
@@ -184,7 +188,7 @@ static void
 test_prepare_error(const char* const path)
 {
   SerdWorld* const world = serd_world_new(NULL);
-  ReaderTest       rt    = {0, 0, 0, 0};
+  ReaderTest       rt    = {0, 0, 0, 0, 0};
 
   FILE* const f = fopen(path, "w+b");
   assert(f);
@@ -230,7 +234,7 @@ test_read_string(void)
   SerdWorld* const world = serd_world_new(NULL);
   serd_world_set_limits(world, limits);
 
-  ReaderTest      rt   = {0, 0, 0, 0};
+  ReaderTest      rt   = {0, 0, 0, 0, 0};
   SerdSink* const sink = serd_sink_new(NULL, &rt, test_sink, NULL);
   assert(sink);
 
@@ -279,50 +283,6 @@ test_read_string(void)
   serd_world_free(world);
 }
 
-/// Reads a null byte after a statement, then succeeds again (like a socket)
-static size_t
-eof_test_read(void* buf, size_t size, size_t nmemb, void* stream)
-{
-  assert(size == 1);
-  assert(nmemb == 1);
-  (void)size;
-
-  static const char* const string = "_:s1 <http://example.org/p> _:o1 .\n"
-                                    "_:s2 <http://example.org/p> _:o2 .\n";
-
-  size_t* const count = (size_t*)stream;
-
-  // Normal reading for the first statement
-  if (*count < 35) {
-    *(char*)buf = string[*count];
-    ++*count;
-    return nmemb;
-  }
-
-  // EOF for the first read at the start of the second statement
-  if (*count == 35) {
-    assert(string[*count] == '_');
-    ++*count;
-    return 0;
-  }
-
-  if (*count >= strlen(string)) {
-    return 0;
-  }
-
-  // Normal reading after the EOF, adjusting for the skipped index 35
-  *(char*)buf = string[*count - 1];
-  ++*count;
-  return nmemb;
-}
-
-static int
-eof_test_error(void* stream)
-{
-  (void)stream;
-  return 0;
-}
-
 /// A read of a big page hits EOF then fails to read chunks immediately
 static void
 test_read_eof_by_page(const char* const path)
@@ -339,7 +299,7 @@ test_read_eof_by_page(const char* const path)
   SerdWorld* const world = serd_world_new(NULL);
   serd_world_set_limits(world, limits);
 
-  ReaderTest        rt     = {0, 0, 0, 0};
+  ReaderTest        rt     = {0, 0, 0, 0, 0};
   SerdSink* const   sink   = serd_sink_new(NULL, &rt, test_sink, NULL);
   SerdEnv* const    env    = serd_env_new(NULL, zix_empty_string());
   SerdReader* const reader = serd_reader_new(world, SERD_TURTLE, 0U, env, sink);
@@ -351,6 +311,9 @@ test_read_eof_by_page(const char* const path)
 
   assert(serd_reader_start(reader, &in, NULL, 4096) == SERD_SUCCESS);
   assert(serd_reader_read_chunk(reader) == SERD_SUCCESS);
+  assert(rt.n_event == 1);
+  assert(rt.n_statement == 1);
+
   assert(serd_reader_read_chunk(reader) == SERD_FAILURE);
   assert(serd_reader_read_chunk(reader) == SERD_FAILURE);
   assert(!serd_reader_finish(reader));
@@ -365,71 +328,22 @@ test_read_eof_by_page(const char* const path)
   assert(!zix_remove(path));
 }
 
-// A byte-wise reader hits EOF once then continues (like a socket)
-static void
-test_read_eof_by_byte(void)
-{
-  static const SerdLimits limits = {1024, 1};
-
-  SerdWorld* const world = serd_world_new(NULL);
-  serd_world_set_limits(world, limits);
-
-  ReaderTest        rt     = {0, 0, 0, 0};
-  SerdSink* const   sink   = serd_sink_new(NULL, &rt, test_sink, NULL);
-  SerdEnv* const    env    = serd_env_new(NULL, zix_empty_string());
-  SerdReader* const reader = serd_reader_new(world, SERD_TURTLE, 0U, env, sink);
-  assert(reader);
-  assert(sink);
-
-  size_t          n_reads = 0U;
-  SerdInputStream in      = serd_open_input_stream(
-    (SerdReadFunc)eof_test_read, (SerdErrorFunc)eof_test_error, NULL, &n_reads);
-
-  assert(serd_reader_start(reader, &in, NULL, 1) == SERD_SUCCESS);
-  assert(serd_reader_read_chunk(reader) == SERD_SUCCESS);
-  assert(serd_reader_read_chunk(reader) == SERD_FAILURE);
-  assert(serd_reader_read_chunk(reader) == SERD_SUCCESS);
-  assert(serd_reader_read_chunk(reader) == SERD_FAILURE);
-  assert(!serd_reader_finish(reader));
-  assert(!serd_close_input(&in));
-
-  serd_reader_free(reader);
-  serd_env_free(env);
-  serd_sink_free(sink);
-  serd_world_free(world);
-}
-
 static void
 test_read_flat_chunks(const char* const path, const SerdSyntax syntax)
 {
   static const SerdLimits limits = {1024, 1};
-  static const char       null   = 0;
 
   FILE* const f = fopen(path, "w+b");
   assert(f);
 
-  // Write two statements, a null separator, then another statement
-
-  fprintf(f,
-          "<http://example.org/s> <http://example.org/p1> "
-          "<http://example.org/o1> .\n");
-
-  fprintf(f,
-          "<http://example.org/s> <http://example.org/p2> "
-          "<http://example.org/o2> .\n");
-
-  fwrite(&null, sizeof(null), 1, f);
-
-  fprintf(f,
-          "<http://example.org/s> <http://example.org/p3> "
-          "<http://example.org/o3> .\n");
-
-  fseek(f, 0, SEEK_SET);
+  // Write one statement and rewind to the start
+  fprintf(f, "_:s <http://example.org/p1> _:o1 .\n");
+  assert(!fseek(f, 0, SEEK_SET));
 
   SerdWorld* const world = serd_world_new(NULL);
   serd_world_set_limits(world, limits);
 
-  ReaderTest      rt   = {0, 0, 0, 0};
+  ReaderTest      rt   = {0, 0, 0, 0, 0};
   SerdSink* const sink = serd_sink_new(NULL, &rt, test_sink, NULL);
   assert(sink);
 
@@ -448,45 +362,46 @@ test_read_flat_chunks(const char* const path, const SerdSyntax syntax)
   // Read first statement
   st = serd_reader_read_chunk(reader);
   assert(st == SERD_SUCCESS);
-  assert(rt.n_base == 0);
-  assert(rt.n_prefix == 0);
+  assert(rt.n_event == 1);
   assert(rt.n_statement == 1);
-  assert(rt.n_end == 0);
+
+  // Read EOF
+  st = serd_reader_read_chunk(reader);
+  assert(st == SERD_FAILURE);
+  assert(feof(f));
+  assert(rt.n_event == 1);
+
+  const long eof_pos = ftell(f);
+
+  // Write second and third statements
+  fprintf(f,
+          "<http://example.org/s> <http://example.org/p2> "
+          "<http://example.org/o2> .\n"
+          "<http://example.org/s> <http://example.org/p3> "
+          "<http://example.org/o3> .\n");
+
+  // Rewind to the no-longer-EOF position
+  clearerr(f);
+  assert(!fseek(f, eof_pos, SEEK_SET));
 
   // Read second statement
   st = serd_reader_read_chunk(reader);
   assert(st == SERD_SUCCESS);
-  assert(rt.n_base == 0);
-  assert(rt.n_prefix == 0);
+  assert(rt.n_event == 2);
   assert(rt.n_statement == 2);
-  assert(rt.n_end == 0);
 
-  // Read terminator
-  st = serd_reader_read_chunk(reader);
-  assert(st == SERD_FAILURE);
-  assert(rt.n_base == 0);
-  assert(rt.n_prefix == 0);
-  assert(rt.n_statement == 2);
-  assert(rt.n_end == 0);
-
-  // Read last statement
+  // Read third statement
   st = serd_reader_read_chunk(reader);
   assert(st == SERD_SUCCESS);
-  assert(rt.n_base == 0);
-  assert(rt.n_prefix == 0);
+  assert(rt.n_event == 3);
   assert(rt.n_statement == 3);
-  assert(rt.n_end == 0);
 
-  // EOF
+  // Read EOF again
   st = serd_reader_read_chunk(reader);
   assert(st == SERD_FAILURE);
-  assert(rt.n_base == 0);
-  assert(rt.n_prefix == 0);
-  assert(rt.n_statement == 3);
-  assert(rt.n_end == 0);
+  assert(rt.n_event == 3);
 
   assert(serd_reader_read_chunk(reader) == SERD_FAILURE);
-
   assert(!serd_close_input(&in));
   serd_reader_free(reader);
   serd_env_free(env);
@@ -500,23 +415,19 @@ static void
 test_read_abbrev_chunks(const char* const path, const SerdSyntax syntax)
 {
   static const SerdLimits limits = {1024, 2};
-  static const char       null   = 0;
 
   FILE* const f = fopen(path, "w+b");
   assert(f);
 
-  // Write two statements separated by null characters
+  // Write two directives and two statements
   fprintf(f, "@base <http://example.org/base/> .\n");
   fprintf(f, "@prefix eg: <http://example.org/> .\n");
   fprintf(f, "eg:s eg:p1 eg:o1 ;\n");
   fprintf(f, "     eg:p2 eg:o2 .\n");
-  fwrite(&null, sizeof(null), 1, f);
-  fprintf(f, "eg:s eg:p [ eg:sp eg:so ] .\n");
-  fwrite(&null, sizeof(null), 1, f);
   fseek(f, 0, SEEK_SET);
 
   SerdWorld* const world    = serd_world_new(NULL);
-  ReaderTest       rt       = {0, 0, 0, 0};
+  ReaderTest       rt       = {0, 0, 0, 0, 0};
   SerdSink* const  out_sink = serd_sink_new(NULL, &rt, test_sink, NULL);
   assert(out_sink);
 
@@ -540,61 +451,46 @@ test_read_abbrev_chunks(const char* const path, const SerdSyntax syntax)
   // Read base
   st = serd_reader_read_chunk(reader);
   assert(st == SERD_SUCCESS);
+  assert(rt.n_event == 1);
   assert(rt.n_base == 1);
-  assert(rt.n_prefix == 0);
-  assert(rt.n_statement == 0);
-  assert(rt.n_end == 0);
 
   // Read prefix
   st = serd_reader_read_chunk(reader);
   assert(st == SERD_SUCCESS);
-  assert(rt.n_base == 1);
+  assert(rt.n_event == 2);
   assert(rt.n_prefix == 1);
-  assert(rt.n_statement == 0);
-  assert(rt.n_end == 0);
 
   // Read first two statements
   st = serd_reader_read_chunk(reader);
   assert(st == SERD_SUCCESS);
-  assert(rt.n_base == 1);
-  assert(rt.n_prefix == 1);
+  assert(rt.n_event == 4);
   assert(rt.n_statement == 2);
-  assert(rt.n_end == 0);
 
-  // Read terminator
+  // Read EOF
   st = serd_reader_read_chunk(reader);
   assert(st == SERD_FAILURE);
-  assert(rt.n_base == 1);
-  assert(rt.n_prefix == 1);
-  assert(rt.n_statement == 2);
-  assert(rt.n_end == 0);
+  assert(rt.n_event == 4);
 
-  // Read statements after null terminator
+  const long eof_pos = ftell(f);
+
+  // Write 2 more statements
+  fprintf(f, "eg:s eg:p [ eg:sp eg:so ] .\n");
+  clearerr(f);
+  assert(!fseek(f, eof_pos, SEEK_SET));
+
+  // Read 2 new statements
   st = serd_reader_read_chunk(reader);
   assert(st == SERD_SUCCESS);
-  assert(rt.n_base == 1);
-  assert(rt.n_prefix == 1);
+  assert(rt.n_event == 7);
   assert(rt.n_statement == 4);
   assert(rt.n_end == 1);
 
-  // Read terminator
+  // Read EOF again
   st = serd_reader_read_chunk(reader);
   assert(st == SERD_FAILURE);
-  assert(rt.n_base == 1);
-  assert(rt.n_prefix == 1);
-  assert(rt.n_statement == 4);
-  assert(rt.n_end == 1);
-
-  // EOF
-  st = serd_reader_read_chunk(reader);
-  assert(st == SERD_FAILURE);
-  assert(rt.n_base == 1);
-  assert(rt.n_prefix == 1);
-  assert(rt.n_statement == 4);
-  assert(rt.n_end == 1);
+  assert(rt.n_event == 7);
 
   assert(serd_reader_read_chunk(reader) == SERD_FAILURE);
-
   assert(!serd_close_input(&in));
   serd_reader_free(reader);
   serd_sink_free(sink);
@@ -614,7 +510,7 @@ test_read_empty(const char* const path)
   SerdWorld* const world = serd_world_new(NULL);
   serd_world_set_limits(world, limits);
 
-  ReaderTest      rt   = {0, 0, 0, 0};
+  ReaderTest      rt   = {0, 0, 0, 0, 0};
   SerdSink* const sink = serd_sink_new(NULL, &rt, test_sink, NULL);
   assert(sink);
 
@@ -720,7 +616,6 @@ main(void)
   test_prepare_error(ttl_path);
   test_read_string();
   test_read_eof_by_page(ttl_path);
-  test_read_eof_by_byte();
   test_error_cursor();
 
   assert(!zix_remove(dir));
